reformated day one and two

--- a/_doors/1.markdown
+++ b/_doors/1.markdown
@@ -7,33 +7,32 @@ title:	Die Challenge beginnt!
 
 <p>Heute, am ersten Tag der Challenge, können wir bereits&nbsp;folgende Contributions verzeichnen:</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/dbinggeli">Daniel Binggeli</a>:</h3>
-<p>“Ich habe gestern folgende Anfrage erhalten. Dies weil ich mal einen Blog zu kiviendo (<span class="twikiNewLink">OpenSource</span>&nbsp;ERP) geschrieben habe. Das Dockerimage für SQL Ledger habe ich vor längerem schon mal erstellt. Wie sich herausgestellt hat hatte das aber noch ein paar Fehler. Ich habe das gestern Abend und heute Morgen noch korrigiert. Dockerfile hier: <a href="https://github.com/drnoa/sqlledger_docker" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/drnoa/sqlledger_docker', 'https://github.com/drnoa/sqlledger_docker');" target="_top">https://github.com/drnoa/sqlledger_docker</a> Dockerhub Image hier: <a href="https://hub.docker.com/r/drnoa/sqlledger-docker/" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://hub.docker.com/r/drnoa/sqlledger-docker/', 'https://hub.docker.com/r/drnoa/sqlledger-docker/');" target="_top">https://hub.docker.com/r/drnoa/sqlledger-docker/</a>”</p>
+<p>“Ich habe gestern folgende Anfrage erhalten. Dies weil ich mal einen Blog zu kiviendo (<span class="twikiNewLink">OpenSource</span>&nbsp;ERP) geschrieben habe. Das Dockerimage für SQL Ledger habe ich vor längerem schon mal erstellt. Wie sich herausgestellt hat hatte das aber noch ein paar Fehler. Ich habe das gestern Abend und heute Morgen noch korrigiert. Dockerfile hier: <a target="_top" href="https://github.com/drnoa/sqlledger_docker">https://github.com/drnoa/sqlledger_docker</a> Dockerhub Image hier: <a target="_top" href="https://hub.docker.com/r/drnoa/sqlledger-docker/">https://hub.docker.com/r/drnoa/sqlledger-docker/</a>”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/pgassmann">Philipp Gassmann</a>:</h3>
-<p>“Kleiner kosmetischer Bugfix für das puppet-push Projekt: <a href="https://github.com/tomas-edwardsson/puppet-push/pull/17" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/tomas-edwardsson/puppet-push/pull/17', 'https://github.com/tomas-edwardsson/puppet-push/pull/17');" target="_top">https://github.com/tomas-edwardsson/puppet-push/pull/17</a>”</p>
+<p>“Kleiner kosmetischer Bugfix für das puppet-push Projekt: <a target="_top" href="https://github.com/tomas-edwardsson/puppet-push/pull/17">https://github.com/tomas-edwardsson/puppet-push/pull/17</a>”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/tphilipona">Thomas Philipona</a>:</h3>
-<p>“Ich habe unter <a href="https://github.com/puzzle/flyway-cdi-integration" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/puzzle/flyway-cdi-integration', 'https://github.com/puzzle/flyway-cdi-integration');">https://github.com/puzzle/flyway-cdi-integration</a> das&nbsp;Datenbank-Migrations-Tool “Flyway” in einer ersten Version um eine Java EE&nbsp;CDI Extension erweitert, damit Datenbank-Migrationen beim Starten des&nbsp;Applikationsserver direkt gegen die DB ausgeführt werden. Dies gab es&nbsp;bis heute nur für Liquibase und ist für Konzepte wie Continuous Delivery&nbsp;oder Deployment essentiell.”</p>
+<p>“Ich habe unter <a href="https://github.com/puzzle/flyway-cdi-integration">https://github.com/puzzle/flyway-cdi-integration</a> das&nbsp;Datenbank-Migrations-Tool “Flyway” in einer ersten Version um eine Java EE&nbsp;CDI Extension erweitert, damit Datenbank-Migrationen beim Starten des&nbsp;Applikationsserver direkt gegen die DB ausgeführt werden. Dies gab es&nbsp;bis heute nur für Liquibase und ist für Konzepte wie Continuous Delivery&nbsp;oder Deployment essentiell.”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/dtschan">Daniel Tschan</a>:</h3>
-<p>“Pull Request für einen Bugfix des offiziellen&nbsp;OpenShift Ansible Playbooks. Das Playbook dient der Installation und&nbsp;Konfiguration von OpenShift 3: &nbsp;<a href="https://github.com/openshift/openshift-ansible/pull/1004" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/openshift/openshift-ansible/pull/1004', 'https://github.com/openshift/openshift-ansible/pull/1004');">https://github.com/openshift/openshift-ansible/pull/1004</a>&nbsp;”</p>
+<p>“Pull Request für einen Bugfix des offiziellen&nbsp;OpenShift Ansible Playbooks. Das Playbook dient der Installation und&nbsp;Konfiguration von OpenShift 3: &nbsp;<a href="https://github.com/openshift/openshift-ansible/pull/1004">https://github.com/openshift/openshift-ansible/pull/1004</a>&nbsp;”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/psimon">Pascal Simon</a>:</h3>
-<p>“Habe meine VIM Konfiguration auf Github zur Verfügung gestellt.&nbsp;<a href="https://github.com/psunix/dot-vim" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/psunix/dot-vim', 'https://github.com/psunix/dot-vim');">https://github.com/psunix/dot-vim</a>”</p>
+<p>“Habe meine VIM Konfiguration auf Github zur Verfügung gestellt.&nbsp;<a href="https://github.com/psunix/dot-vim">https://github.com/psunix/dot-vim</a>”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/mburri">Max Burri</a>:</h3>
-<p>“Mein Beitrag von heute: <a href="https://github.com/mburri/break-out" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/mburri/break-out', 'https://github.com/mburri/break-out');">https://github.com/mburri/break-out</a></p>
-<p>– Projekt erstellt<br>
-– Erste Unit Tests und Implementationen</p>
+<p>“Mein Beitrag von heute: <a href="https://github.com/mburri/break-out">https://github.com/mburri/break-out</a></p>
+<p>&ndash; Projekt erstellt<br>
+   &ndash; Erste Unit Tests und Implementationen</p>
 <p>Das Projekt hat folgende Ziele:<br>
-1. Mal ein Game machen<br>
-2. Weiterbildung in folgenden Themen<br>
-– es6/es2015<br>
-– javascript unit testing<br>
-– redux (pattern, ev. werde ich die Library gar nicht verwenden)<br>
-– javascript tools: npm, babel, webpack”</p>
+    1. Mal ein Game machen<br>
+    2. Weiterbildung in folgenden Themen<br>
+    &ndash; es6/es2015<br>
+    &ndash; javascript unit testing<br>
+    &ndash; redux (pattern, ev. werde ich die Library gar nicht verwenden)<br>
+    &ndash; javascript tools: npm, babel, webpack”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/pzumkehr">Pascal Zumkehr</a>:</h3>
 <p>“Tarantula is a big hairy fuzzy spider that crawls your site, wreaking&nbsp;havoc.&nbsp;We change the crawl order to process GET requests before all others in&nbsp;order to avoid stale views.<br>
-<a href="https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12', 'https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12');">https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12</a>”</p>
-<h3><a href="http://renemoser.net/about/" onclick="__gaTracker('send', 'event', 'outbound-article', 'http://renemoser.net/about/', 'René Moser');">René Moser</a>:</h3>
-<p>“Einmal: <a href="https://github.com/ansible/ansible-modules-extras/pull/1294" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/ansible/ansible-modules-extras/pull/1294', 'https://github.com/ansible/ansible-modules-extras/pull/1294');">https://github.com/ansible/ansible-modules-extras/pull/1294</a>&nbsp;Erweiterung des CloudStack Ansible Module cs_instance und dann noch ein Blogpost:&nbsp;Crowdfounding Ansible CloudStack Modules&nbsp;<a href="http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/" onclick="__gaTracker('send', 'event', 'outbound-article', 'http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/', 'http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/');">http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/</a>&nbsp;”</p>
+    <a  href="https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12">https://github.com/codez/tarantula/commit/3fe47e6e1adf41670a60844e356b2cc532818c12</a>”</p>
+<h3><a href="http://renemoser.net/about/">René Moser</a>:</h3>
+<p>“Einmal: <a href="https://github.com/ansible/ansible-modules-extras/pull/1294">https://github.com/ansible/ansible-modules-extras/pull/1294</a>&nbsp;Erweiterung des CloudStack Ansible Module cs_instance und dann noch ein Blogpost:&nbsp;Crowdfounding Ansible CloudStack Modules&nbsp;<a href="http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/">http://renemoser.net/blog/2015/11/26/crowdfounding-ansible-cloudstack-modules/</a>&nbsp;”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/astrauss">Anselm Strauss</a>:</h3>
-<p>“Report issue: vim-go plugin does not build when using separate header&nbsp;file in a project with cgo.&nbsp;<a href="https://github.com/fatih/vim-go/issues/639" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/fatih/vim-go/issues/639', 'https://github.com/fatih/vim-go/issues/639');">https://github.com/fatih/vim-go/issues/639</a> <a href="https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6', 'https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6');">https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6</a>&nbsp;”</p>
+<p>“Report issue: vim-go plugin does not build when using separate header&nbsp;file in a project with cgo.&nbsp;<a href="https://github.com/fatih/vim-go/issues/639">https://github.com/fatih/vim-go/issues/639</a> <a href="https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6">https://github.com/amsibamsi/opengles-examples/commit/bb58db2bbfe0df1d7632857649de5a88948d61e6</a>&nbsp;”</p>
 <h3><a href="https://www.puzzle.ch/de/blog/articles/author/pgrogg">Philipp Grogg</a>:</h3>
-<p>“Ich habe gestern meinen pull request zu liquidprompt erweitert:&nbsp;<a href="https://github.com/nojhan/liquidprompt/pull/409" onclick="__gaTracker('send', 'event', 'outbound-article', 'https://github.com/nojhan/liquidprompt/pull/409', 'https://github.com/nojhan/liquidprompt/pull/409');">https://github.com/nojhan/liquidprompt/pull/409</a>“</p>
-   
+<p>“Ich habe gestern meinen pull request zu liquidprompt erweitert:&nbsp;<a href="https://github.com/nojhan/liquidprompt/pull/409">https://github.com/nojhan/liquidprompt/pull/409</a>“</p>
