--- a/_doors/3.markdown
+++ b/_doors/3.markdown
@@ -3,4 +3,7 @@ day: 	3
 title:	Going steady!
 ---
 
-### Wir bleiben dran
+<h3><a href="https://www.puzzle.ch/de/blog/articles/author/psimon">Pascal Simon</a>:</h3>
+<p>diverse Issue für Cryptopus erfasst. Zusätzlicher Commit.&nbsp;<a href="https://github.com/puzzle/cryptopus">https://github.com/puzzle/cryptopus</a></p>
+<h3><a href="https://www.puzzle.ch/de/blog/articles/author/tphilipona">Thomas Philipona</a>:</h3>
+<p>Die neue Open Source Advents Challenge Diary Seite wurde erstellt und unter: <a href="https://github.com/puzzle/opensource-advent-challenge-2015">https://github.com/puzzle/opensource-advent-challenge-2015</a> veröffentlicht. Neu werden unsere Contributions direkt hier dokumentiert. </p>
