--- a/_doors/03.markdown
+++ b/_doors/03.markdown
@@ -18,3 +18,5 @@ Damit Puzzle Forms einfach für interessierte zugänglich ist, habe ich ein Dock
 ### [Philipp Gassmann](https://github.com/pgassmann)
 Beim Entwickeln von meinem Puppet-Modul für [Let's Encrypt, das übrigens heute in die Public Beta Phase eintrat] (https://letsencrypt.org/2015/12/03/entering-public-beta.html). Habe ich mich mit der getparam funktion aus dem stdlib modul auseinander gesetzt und deren unerwartetes Verhalten in einem Ticket erfasst. <https://tickets.puppetlabs.com/browse/MODULES-2874>
 
+### [Philipp Grogg](https://github.com/gro-gg)
+Dokumentation des Java Profilers [modjprof](https://github.com/gro-gg/modjprof) ergänzt.
