contribution für Tag 3

--- a/_doors/03.markdown
+++ b/_doors/03.markdown
@@ -18,3 +18,6 @@ Damit Puzzle Forms einfach für interessierte zugänglich ist, habe ich ein Dock
 ### [Philipp Gassmann](https://github.com/pgassmann)
 Beim Entwickeln von meinem Puppet-Modul für [Let's Encrypt, das übrigens heute in die Public Beta Phase eintrat] (https://letsencrypt.org/2015/12/03/entering-public-beta.html). Habe ich mich mit der getparam funktion aus dem stdlib modul auseinander gesetzt und deren unerwartetes Verhalten in einem Ticket erfasst. <https://tickets.puppetlabs.com/browse/MODULES-2874>
 
+### [Roland Studer](https://github.com/rolandstuder)
+Ich habe schon vor zwei Jahren begonnen für mich ein Framework für Prototyping von Webapplikationen auf Basis von Meteor.js zu entwicklen. Ich habe die Advents Challenge als Anlass genommen, das Projekt endlich unter eine MIT Lizenz gestellt. [Dokumentation](https://rolandstuder.github.io/jeizinen-meteor/index.html).
+
