contribution added for day four

--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -4,6 +4,5 @@ title:	Tag 4
 active: true
 ---
 
-noch keine Contributions...
-
-
+### [Philipp Matti](https://github.com/phil-matti)
+Latex-Template für die IPA nach Hermes.<https://github.com/phil-matti/ipa-latex-template>
