fix swiss styleguide pull request url

--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -8,4 +8,4 @@ active: true
 Latex-Template für die IPA nach Hermes.<https://github.com/phil-matti/ipa-latex-template>
 
 ### [Mathis Hofer](https://github.com/hupf)
-Pull Request mit Fonts-Path-Fix für den admin.ch Styleguide wurde heute gemerged: <https://github.com/puzzle/opensource-advent-challenge-2015.git>
+Pull Request mit Fonts-Path-Fix für den admin.ch Styleguide wurde heute gemerged: <https://github.com/swiss/styleguide/pull/416>
