psunix: contribution day 4

--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -27,3 +27,5 @@ Die erweiterte Version von [schemaspy](https://github.com/drnoa/schemaspy), welc
 
 
 
+### [Pascal Simon](https://github.com/psunix)
+Cryptopus: JavaScript aufgeräumt, Assets Precompile fixed https://github.com/puzzle/cryptopus
