--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -40,3 +40,8 @@ Link-Sharer / Forwarder for Open Device Labs
 Whenenver you are in a Open Device Lab and you want to test an webapplication or website, you have the problem, that you have enter your URL on all the devices. We thought, that this is super inconvenient. So to help you with that
 
 TADAAAA - enter linksharer https://github.com/wearecube/device-lab-link-forwarder
+
+### [Daniel Tschan](https://github.com/dtschan)
+Der pull request von gestern wurde bereits wieder gemerged: <https://github.com/nijel/weblate/commit/7300b564e77a14cbc479108dfd034d4b9c4715e4>
+
+Heute habe ich an der Dokumentation unserers OpenShift 3 Puppet Modules weitergearbeitet: <https://github.com/puzzle/puppet-openshift3/commit/ae52fa675907f7a1323b3963282cda3850e9fad7>
