--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -47,4 +47,7 @@ Der pull request von gestern wurde bereits wieder gemerged: <https://github.com/
 Heute habe ich an der Dokumentation unserers OpenShift 3 Puppet Modules weitergearbeitet: <https://github.com/puzzle/puppet-openshift3/commit/ae52fa675907f7a1323b3963282cda3850e9fad7>
 
 ### [Max Burri](https://github.com/mburri)
-it's moooooving... 
+it's moooooving...
+
+### [Lorenz Bischof](https://github.com/lbischof)
+Sicherstellen, dass die Advents Challenge Seite auf Handies nur in eine Richtung scrollt. <https://github.com/puzzle/opensource-advent-challenge-2015/commit/a09fb94b68611f431a13063f14fec8eb56ae1965>
