clickable urls and Links

--- a/_doors/04.markdown
+++ b/_doors/04.markdown
@@ -28,10 +28,10 @@ Die erweiterte Version von [schemaspy](https://github.com/drnoa/schemaspy), welc
 
 
 ### [Pascal Simon](https://github.com/psunix)
-Cryptopus: JavaScript aufgeräumt, Assets Precompile fixed https://github.com/puzzle/cryptopus
+[Cryptopus](https://github.com/puzzle/cryptopus): JavaScript aufgeräumt, Assets Precompile fixed
 
 ### [Janiss Binder](https://github.com/janissbinder)
-Cryptopus: Accounts search fixed, das Löschen eines Teams eingeschränkt https://github.com/puzzle/cryptopus
+[Cryptopus](https://github.com/puzzle/cryptopus): Accounts search fixed, das Löschen eines Teams eingeschränkt
 
 ### [Roland Studer](https://github.com/rolandstuder)
 Publizieren des Open Device Lab Link Sharers auf Github mit einer MIT License.
@@ -39,7 +39,7 @@ Publizieren des Open Device Lab Link Sharers auf Github mit einer MIT License.
 Link-Sharer / Forwarder for Open Device Labs
 Whenenver you are in a Open Device Lab and you want to test an webapplication or website, you have the problem, that you have enter your URL on all the devices. We thought, that this is super inconvenient. So to help you with that
 
-TADAAAA - enter linksharer https://github.com/wearecube/device-lab-link-forwarder
+TADAAAA - enter linksharer <https://github.com/wearecube/device-lab-link-forwarder>
 
 ### [Daniel Tschan](https://github.com/dtschan)
 Der pull request von gestern wurde bereits wieder gemerged: <https://github.com/nijel/weblate/commit/7300b564e77a14cbc479108dfd034d4b9c4715e4>
