--- a/_doors/05.markdown
+++ b/_doors/05.markdown
@@ -14,5 +14,6 @@ du leise Zeit
 [Man kann jetzt tatsächlich spielen (und verlieren)](http://mburri.github.io/break-out/dist/index.html)
 - ich musste einige Teile der Applikation anpassen und habe einiges über die redux reducers, vor allem über die Kombination mehrerer reducers, gelernt.
 - aus heiterem Himmel kam mein erster (nicht Puzzler) Follower [vom anderen Ende der Welt](https://github.com/TomClarkson).
+
 ### [Philipp Matti](https://github.com/phil-matti)
-[c-for-sys-linux](https://github.com/phil-matti/c-for-sys-linux): Ich erstelle einige Beispiele für die Nutzung von C unter Linux. Ziel ist es, einen eigenen Daemon zu programmieren und möglichst viel dabei zu lernen.
+[c-for-sys-linux](https://github.com/phil-matti/c-for-sys-linux) Ich erstelle einige Beispiele für die Nutzung von C unter Linux. Ziel ist es, einen eigenen Daemon zu programmieren und möglichst viel dabei zu lernen.
