--- a/_doors/05.markdown
+++ b/_doors/05.markdown
@@ -19,4 +19,4 @@ du leise Zeit
 [c-for-sys-linux](https://github.com/phil-matti/c-for-sys-linux) Ich erstelle einige Beispiele für die Nutzung von C unter Linux. Ziel ist es, einen eigenen Daemon zu programmieren und möglichst viel dabei zu lernen.
 
 ### [Thomas Philipona](https://github.com/phil-pona)
-Copy & Past Fehler im offiziellen Wildfly 9 STI Dockerfile gefixed und per Pull Request eingegeben: https://github.com/openshift/sti-wildfly/pull/62
+Copy & Past Fehler im offiziellen Wildfly 9 STI Dockerfile gefixed und per [Pull Request](https://github.com/openshift/sti-wildfly/pull/62) eingegeben: 
