--- a/_doors/05.markdown
+++ b/_doors/05.markdown
@@ -21,3 +21,6 @@ du leise Zeit
 ### [Thomas Philipona](https://github.com/phil-pona)
 Copy & Past Fehler im offiziellen Wildfly 9 STI Dockerfile gefixed und per [Pull Request](https://github.com/openshift/sti-wildfly/pull/62) eingegeben.
 Zusätzlich habe ich heute den Wildfly 10.0.0CR4 im OpenShift [Wildfly S2I Repo](https://github.com/phil-pona/sti-wildfly/tree/dev/wildfly10) hinzugefügt.
+
+### [Oliver Gugger](https://github.com/guggero)
+Initiales Projekt-Setup für das AngularJS-Modul [ng-user-auth](https://github.com/guggero/ng-user-auth): Projekt-Skeleton mit Karma-Tests und Travis-CI-Integration.
