--- a/_doors/05.markdown
+++ b/_doors/05.markdown
@@ -30,3 +30,7 @@ Heute habe ich das ERD vom Cryptopus erneuert: <https://github.com/puzzle/crypto
 
 ### [Daniel Tschan](https://github.com/dtschan)
 OpenShift Enterprise 3.1 enthält nun einen integrierten EFK (Elasticsearch, Fluentd, Kibana) Stack um alle Container- und Platformlogs aggregrieren und analysieren zu können. Dessen Installation erfordert momentan noch diverse manuelle Schritte. Ich habe heute begonnen diese in unserem OpenShift 3 Puppet Modul zu automatisieren: <https://github.com/puzzle/puppet-openshift3/commits/logging>
+
+### [Philipp Gassmann](https://github.com/pgassmann)
+Letsencrypt Puppet Modul auf Forge hochgeladen: <https://forge.puppetlabs.com/pgassmann/letsencrypt>
+Alternatives Letsencrypt Puppetmodul gefunden: <https://forge.puppetlabs.com/danzilio/letsencrypt>
